Fix spacing and margins in info section

--- a/assets/sass/partials/_single.scss
+++ b/assets/sass/partials/_single.scss
@@ -4,6 +4,38 @@
     }
 
     .title {
+        display: block;
         font-size: 1.8em;
+    }
+
+    .info {
+        display: block;
+        text-align: left;
+
+        span {
+            display: inline-block;
+            background-color: $white;
+            border-bottom: 2px solid $black-03;
+            color: $black-07;
+            padding: 2px;
+
+            margin-top: 1em;
+
+            &.read-time {
+                padding: 4px;
+            }
+
+            &:not(:last-child) {
+                margin-right: 3px;
+            }
+
+            a {
+                &:not(:last-child)::after {
+                    content: ', ';
+                    font-size: 1em;
+                    color: inherit;
+                }
+            }
+        }
     }
 }
